<?xml version="1.0" encoding="utf-8"?>
<!--
/**
 * Copyright (C) 2018 by George Vrynios
 * This project was made under the supervision of Udacity
 * in the Android Developer Nanodegree Program
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<resources>
    <string name="app_name">Popular Movies</string>

    <string name="refresh">Refresh</string>

    <string name="youtube_player_not_found">An associated Youtube player couldn\'t be found!</string>

    <string name="unexpected_fetch_error">An unexpected error has occurred during contacting themoviedb.org server. Click the button [Refresh] to try again</string>
    <string name="error_check_your_network_connectivity">Please check your network connectivity, and then click the button [Refresh]</string>
    <string name="detail_error_message">Some error was happened on displaying movie\'s details</string>
    <string name="movie_poster_content_description">Movie Poster</string>

    <string name="mnu_sort_by_most_popular">Most Popular</string>
    <string name="mnu_sort_by_highest_rated">Highest Rated</string>
    <string name="mnu_display_favorite_movies">Favorite Movies</string>

    <string name="title_most_popular">Popular Movies</string>
    <string name="title_highest_rated">Highest Rated Movies</string>
    <string name="title_favorite_movies">Favorite Movies</string>
    <string name="title_movie_detail">MovieDetail</string>

    <string name="minutes">min</string>
    <string name="max_rating">/10</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="remove_from_favorites">Remove from favorites</string>

    <string name="title_trailers">Trailers</string>
    <string name="title_reviews">Reviews</string>

    <string name="unknown_uri">Unknown uri:</string>
    <string name="unknown_sort_by">Unknown Sort By:</string>
    <string name="unknown_access_type">Unknown Access Type:</string>
    <string name="failed_to_insert_row_into">Failed to insert row into:</string>
    <string name="doesnt_returns_a_url">, doesn\'t returns a Url</string>
</resources>
