<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (C) 2018 by George Vrynios
 * This project was made under the supervision of Udacity
 * in the Android Developer Nanodegree Program
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aiassoft.popularmovies.DetailActivity"
    >

    <!-- The main content -->
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/sv_movie_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/tv_original_title"
                style="@style/movieTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="0dp"
                >

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    >

                    <ImageView
                        android:id="@+id/iv_movie_poster"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/movie_poster_content_description"
                        android:scaleType="centerCrop"
                        />

                </LinearLayout>

                <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    >

                    <TextView
                        android:id="@+id/tv_release_date"
                        style="@style/movieReleaseDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />

                    <TextView
                        android:id="@+id/tv_runtime"
                        style="@style/movieRuntime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="" />

                    <TextView
                        android:id="@+id/tv_vote_average"
                        style="@style/movieVoteAverage"
                        android:text=""
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <Button
                        android:id="@+id/btn_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onFavoritesButtonClick"
                        android:text="@string/add_to_favorites"
                        android:visibility="invisible" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_overview"
                style="@style/moviePlotSynopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

            <View
                android:id="@+id/v_separator"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:background="@color/secondary_text"/>

            <!-- The videos content -->
            <TextView
                android:id="@+id/tv_trailers_title"
                style="@style/movieSectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_trailers" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_videos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <!-- The reviews content -->
            <TextView
                android:id="@+id/tv_reviews_title"
                style="@style/movieSectionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_reviews" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_reviews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

    </ScrollView>

    <!-- The waiting spinner -->
    <ProgressBar
        android:id="@+id/pb_loading_indicator"
        android:layout_height="42dp"
        android:layout_width="42dp"
        android:layout_gravity="center"
        android:visibility="invisible" />

    <!-- The Error Message Block -->
    <LinearLayout
        android:id="@+id/ll_error_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible">

        <TextView
            android:id="@+id/tv_error_message_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:textSize="20sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRefreshButtonClick"
            android:padding="4dp"
            android:text="@string/refresh"
            android:textSize="18sp" />

    </LinearLayout>

</FrameLayout>